--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
    <!-- barra de busqueda -->
-    
+    <header class="header">
+            <nav>
+                <div class="logo">
+                    <img src ="">
+                </div>
+            </nav>
+
+    </header>
 
 
 
