--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
             <nav>
                 <div class="logo">
-                    <img src ="">
+                    <img src ="./img/logo-blockBuster.png">
                 </div>
             </nav>
 
