busqueda por letras relacionadas

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
             </div>
             <!-- fin caja barra de busqueda -->
         </nav>
-
     </header>
-
+    <main id="main"></main>
 
 
     <script src="scripts/script.js"></script>
