se crea sign up de user

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             </div>
             <!-- fin caja barra de busqueda -->
         </nav>
+        <div class="sign-up">
+           
+            <a href="signup.html">Crear cuenta</a>
+        </div>
     </header>
     <main id="main"></main>
 
