se actualizan datos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="navbar-item">
                             <a class="button " href="signup.html">
 
-                                <strong>Sign Up</strong>
+                                <strong>Registrarme</strong>
                             </a>
 
                         </div>
