se crea template

--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Block Master</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/styles.css">
+  <title>Block Master</title>
 </head>
 
 <body>
- 
-    <main id="main">
-        <div class="template">
+  <section class="section ">
+    <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
+      <ul>
+        <li><a href="#">o</a></li>
+        <li><a href="#">o</a></li>
+        <li><a href="#">o</a></li>
+        <!-- <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li> -->
+      </ul>
+    </nav>
+  </section>
+  <div class="container">
+    <p class="title">Todas las peliculas</p>
+    <div id="principal"></div>
+    
+  </div>
 
 
 
-        </div>
-    </main>
-
-
-    <script src="scripts/script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
