--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
   </section>
   <div class="container">
     <p class="title">Todas las peliculas</p>
-    <div id="principal"></div>
+    <!-- principa es template -->
     
+    <div id="principal"></div> 
+
+
+  <div class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <h1>Pelicula</h1>
+      <!-- Any other Bulma elements you want -->
+
+    </div>
+    <button class="modal-close is-large  " aria-label="close"></button>
   </div>
 
-
+</div>
 
   <script src="scripts/script.js"></script>
 </body>
