boton editar de usuario

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
       <div class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item">
+          <a id="todas"class="navbar-item">
             Todas
           </a>
 
-          <a class="navbar-item">
+          <a id="masV" class="navbar-item">
             Más valoradas
           </a>
 
-          <a class="navbar-item">
+          <a id="menosV" class="navbar-item">
             Menos valoradas
           </a>
           <!-- barra de busqueda -->
@@ -75,22 +75,21 @@
     </nav>
   </section>
 
-  <div class="container">
+  <div id="navFiltro" class="container">
     <p class="title">Todas las peliculas</p>
     <!-- principal es template -->
-
     <div id="principal"></div>
 
     <!-- modal -->
-    <div class="modal">
+    <!-- <div class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
         <h1>Pelicula</h1>
-        <!-- Any other Bulma elements you want -->
+         Any other Bulma elements you want 
 
       </div>
       <button class="modal-close is-large  " aria-label="close"></button>
-    </div>
+    </div> -->
   </div>
 
   <script src="scripts/script.js"></script>
