--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
                         </span>
                     </p>
                 </div>
-                <div class="field">
+                <div class="field field--email">
                     <label for="email" class="label">Correo eletrónico</label>
                     <p class="control has-icons-left">
                         <input id="email" class="input is-normal" type="email"
@@ -44,8 +44,9 @@
                         <span class="icon is-left">
                             <i class="fas fa-envelope"></i>
                         </span>
-                </div>
-                </p>
+                    </p>   
+                    </div>
+                
                 <div class="field">
                     <label for="password" class="label">Contraseña</label>
                     <p class="control has-icons-left">
@@ -55,8 +56,8 @@
                         </span>
                     </p>
                 </div>
-                <p class="control">
-                    <button id="btnSignup" class="button is-normal type=" submit">Crea tu cuenta en Block
+                <p class="control control-btn ">
+                    <button id="btnSignup" class="button is-normal" type="submit" >Crea tu cuenta en Block
                         Master</button>
                 </p>
                 <p class="p">¿Ya tienes una cuenta ? <a id="login" class="link" href="">Ver cuenta registrada</a></p>
