se prueba odal para cada card, index de forEach

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="modal">
     <div class="modal-background"></div>
     <div class="modal-content">
-      <h1>Pelicula</h1>
+      <!-- <h1>Pelicula</h1> -->
       <!-- Any other Bulma elements you want -->
 
     </div>
