barra de busqueda, scroll infinito

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
   </div>
   </div>
 
-
   <div id="filtroMovie" class="container">
     <p class="title">Todas las peliculas</p>
     <!-- principal es template -->
   </div>
   <div id="cartel"class="container">  
     <div id="principal"></div>
+    <div id="principal1"></div>
   </div>
 
   
