--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
   <div id="cartel"class="container">  
     <div id="principal"></div>
     <div id="principal1"></div>
+    <div class="load"></div>
   </div>
 
-  
 
   <script src="scripts/script.js"></script>
 </body>
